# fftcgtool

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  card.py  ffdecks.json  fftcgtool.py  main.py  opus.py  pyproject.toml  setup.py
fftcg/: __init__.py  book.py  card.py  carddb.py  cards.py  code.py  grid.py  imageloader.py  language.py  opus.py  ttsdeck.py  utils.py
fftcgtool/: __init__.py  book.py  card.py  carddb.py  code.py  ffdecks.py  imageloader.py  opus.py  ttsdeck.py  utils.py
fftcgtool/scripts/: fftcgtool.py
