[tool.poetry]
name = "fftcgtool"
version = "0.1.0"
description = ""
authors = ["Jörn-Michael Miehe <jmm@yavook.de>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Pillow = "^9.2.0"
roman = "^3.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
fftcgtool = "fftcgtool.scripts.fftcgtool:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
