[tool.poetry]
authors = ["LDericher <40151420+ldericher@users.noreply.github.com>"]
description = "Card import tool for 'Final Fantasy TCG Complete' mod for the 'Tabletop Simulator' game"
license = "LICENSE"
name = "fftcgtool"
version = "0.2.1"

[tool.poetry.dependencies]
Pillow = "^9.2.0"
click = "^8.1.3"
python = "^3.9"
requests = "^2.28.1"
roman = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
fftcgtool = "fftcgtool.scripts.fftcgtool:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
